Gate registration to dev and protect internal endpoints with ROLE_ADMIN
- RegistrationController is @Profile("dev") only; prod is single-user
- V24: users.role column; existing users promoted to ADMIN (single-user app)
- UserPrincipal now carries the role and exposes ROLE_ADMIN/ROLE_USER
- /api/internal/** requires ROLE_ADMIN; explicit entry points: 401 when
  unauthenticated (drives the frontend refresh flow), 403 when unauthorized
- Dev seed user is ADMIN; security gating integration tests added